<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_reg_f"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearlayout_style_match">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rgTextInputUserName"
        style="@style/textInputStyle">

        <ruijie.com.my12306.widget.citySelector.utils.ClearEditText
            android:id="@+id/rgUserName"
            style="@style/edittextStyle"
            android:hint="@string/username" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rgTextInputPassword"
        style="@style/textInputStyle">

        <ruijie.com.my12306.widget.citySelector.utils.ClearEditText
            android:id="@+id/rgPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:maxLength="12"
            android:inputType="textPassword"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/rgTextInputSecondPassword"
        style="@style/textInputStyle">

        <ruijie.com.my12306.widget.citySelector.utils.ClearEditText
            android:id="@+id/rgSPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/certain_password"
            android:maxLength="12"
            android:inputType="textPassword"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>