<?xml version="1.0" encoding="utf-8"?>

<io.codetail.widget.RevealLinearLayout
    android:id="@+id/reveall"
    xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/linearlayout_style_match"
    >

  <include layout="@layout/base_toolbar_layout"/>

  <ruijie.com.my12306.util.ReboundScrollView
      android:id="@+id/root"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@drawable/register_background"
      xmlns:android="http://schemas.android.com/apk/res/android">

      <LinearLayout
          style="@style/linearlayout_style_match">

           <!-- <android.support.v7.widget.CardView
                style="@style/Card"
                android:layout_margin="@dimen/dp_10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">-->

                <LinearLayout style="@style/linearlayout_style">

                  <android.support.design.widget.TextInputLayout
                      android:id="@+id/textInputUserName"
                      style="@style/textInputStyle"
                      >

                    <EditText
                        android:id="@+id/etUserName"
                        style="@style/edittextStyle"
                        android:hint="@string/username"
                        />
                  </android.support.design.widget.TextInputLayout>

                  <android.support.design.widget.TextInputLayout
                      android:id="@+id/textInputPassword"
                      style="@style/textInputStyle"
                      >

                    <EditText
                        android:id="@+id/etPassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:maxLength="12"
                        android:inputType="textPassword"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        />
                  </android.support.design.widget.TextInputLayout>

                  <android.support.design.widget.TextInputLayout
                      android:id="@+id/textInputSecondPassword"
                      style="@style/textInputStyle"
                      >

                    <EditText
                        android:id="@+id/etSPassWord"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/certain_password"
                        android:maxLength="12"
                        android:inputType="textPassword"
                        android:textColor="?android:attr/textColorPrimary"
                        android:textSize="16sp"
                        />
                  </android.support.design.widget.TextInputLayout>
                </LinearLayout>
            <!--</android.support.v7.widget.CardView>-->

      <!--  <android.support.v7.widget.CardView
            style="@style/Card"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">-->

          <LinearLayout
              style="@style/linearlayout_style">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputId"
                style="@style/textInputStyle"
                >

              <EditText
                  android:id="@+id/etId"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/id"
                  android:inputType="number"
                  android:maxLength="18"
                  android:textColor="?android:attr/textColorPrimary"
                  android:textSize="16sp"
                  />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputNumber"
                style="@style/textInputStyle"
                >

              <EditText
                  android:id="@+id/etNumber"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/phone_number"
                  android:inputType="number"
                  android:maxLength="11"
                  android:textColor="?android:attr/textColorPrimary"
                  android:textSize="16sp"
                  />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputEmial"
                style="@style/textInputStyle"
                >

              <EditText
                  android:id="@+id/etEmail"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/email"
                  android:inputType="textEmailAddress"
                  android:textColor="?android:attr/textColorPrimary"
                  android:textSize="16sp"
                  />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputIdentity"
                style="@style/textInputStyle"
                >

              <EditText
                  android:id="@+id/etIdentity"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:hint="@string/identity"
                  android:inputType="text"
                  android:textColor="?android:attr/textColorPrimary"
                  android:textSize="16sp"
                  />
            </android.support.design.widget.TextInputLayout>
          </LinearLayout>
       <!-- </android.support.v7.widget.CardView>-->

        <android.support.v7.widget.ButtonBarLayout
            android:gravity="center"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <Button
              android:id="@+id/btnCommit"
              android:text="@string/register"
              android:textColor="@color/md_white"
              android:background="@drawable/login_button_background"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />
        </android.support.v7.widget.ButtonBarLayout>

        <ImageView
            android:id="@+id/iv"
            android:layout_width="200dp"
            android:layout_height="200dp" />
      </LinearLayout>
  </ruijie.com.my12306.util.ReboundScrollView>
</io.codetail.widget.RevealLinearLayout>